[package]
name = "jira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cargo-nextest = "0.9.67"
clearscreen = "2.0.1"
ellipse = "0.2.0"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
tempfile = "3.10.0"
